devops/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: csr
  labels:
    app.kubernetes.io/part-of: cybersilkroads
    istio-injection: enabled
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-default
  namespace: csr
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
